force-app/main/default/objects/PBS_BuildingProjectAssociation__c/PBS_BuildingProjectAssociation__c.object-meta.xml
<CustomObject>
    <description>PBS Project-Building Junction Object</description>
    <label>PBS Building Project Association</label>
    <nameField>
        <displayFormat>PBSPRJ-BLDG-{0000000000}</displayFormat>
        <label>PBS Building Project Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS Building Project Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>