force-app/main/default/objects/PBS_BuildingProjectAssociation__c/fields/rluBuilding__c.field-meta.xml
<CustomField>
    <fullName>rluBuilding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Record ID</label>
    <referenceTo>PBS_Building__c</referenceTo>
    <relationshipLabel>PBS Building Project Associations</relationshipLabel>
    <relationshipName>PBS_Building_Project_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>