force-app/main/default/objects/PBS_BuildingProjectAssociation__c/fields/rluProject__c.field-meta.xml
<CustomField>
    <fullName>rluProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Record ID</label>
    <referenceTo>PBS_Project__c</referenceTo>
    <relationshipLabel>PBS Building Project Associations</relationshipLabel>
    <relationshipName>PBS_Building_Project_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>