force-app/main/default/objects/PBS_BuildingProjectAssociation__c/fields/txtAssociationID__c.field-meta.xml
<CustomField>
    <fullName>txtAssociationID__c</fullName>
    <externalId>true</externalId>
    <label>Association ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>